chi/org.eclipse.escet.chi.tests/tests/spec/expr/strings/string-slice-negative-start.run.err
ERROR: Runtime error while executing "M".
at model "M" near line 19.
CAUSE: Start index of string slice is out of range, value is -7, while the lowest allowed value is -6.
