chi/org.eclipse.escet.chi.tests/tests/spec/expr/strings/string-slice-negative-start.chi
################################################################################
# Copyright (c) 2010, 2020 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the terms
# of the MIT License which is available at https://opensource.org/licenses/MIT
#
# SPDX-License-Identifier: MIT
#################################################################################

model M():
    string s = "abcdef";

    writeln("%s", s[2:0:-1]);
    writeln("%s", s[0:0:-1]);
    writeln("%s", s[-6:0:-1]);
    writeln("%s", s[-7:0:-1]);
end
